# notepad_plus_plus_Linux_porting

./: .gitignore  CMakeLists.txt  README.md  build.sh  design.md  plan.md  windows_guide.md
packaging/: build_appimage.sh  build_deb.sh
plugins/MimeTools/: MimeTools.cpp
plugins/NppExport/: NppExport.cpp
resources/: notepad++.1  notepad++.desktop
src/: DocumentMap.cpp  DocumentMap.h  FindInFilesDlg.cpp  FindInFilesDlg.h  FindReplaceDlg.cpp  FindReplaceDlg.h  FunctionList.cpp  FunctionList.h  MacroManager.cpp  MacroManager.h  NotepadPlusGtk.cpp  NotepadPlusGtk.h  Parameters.cpp  Parameters.h  PluginManager.cpp  PluginManager.h  ScintillaView.cpp  ScintillaView.h  WorkspacePanel.cpp  WorkspacePanel.h  main.cpp  npp_plugin_api.h
